  waiting for the thread to exit in wxMSW. They still do it in default build
  with WXWIN_COMPATIBILITY_2_8 defined but won't dispatch any events, i.e. the
  default wait mode will become wxTHREAD_WAIT_BLOCK in the next wxWidgets
  release so you are strongly encouraged to upgrade your code to stop relying
  on this behaviour.


Changes in behaviour which may result in compilation errors
-----------------------------------------------------------

- WXWIN_COMPATIBILITY_2_4 doesn't exist any more, please update your code if
  you still relied on features deprecated since version 2.4

- wxDC classes hierarchy has changed, if you derived any classes from wxDC you
  need to review them as wxDC doesn't have any virtual methods any longer and
  uses delegation instead of inheritance to present different behaviours.

- wxWindow::ProcessEvent() (and other wxEvtHandler methods inherited by wxWindow)
  has been made protected to prevent wrongly using it instead of correct
  GetEventHandler()->ProcessEvent().
  New ProcessWindowEvent() was added for convenience.

- Return type of wxString::operator[] and wxString::iterator::operator* is no
  longer wxChar (i.e. char or wchar_t), but wxUniChar. This is not a problem
  in vast majority of cases because of conversion operators, but it can break
  code that depends on the result being wxChar.

- The value returned by wxString::c_str() cannot be casted to non-const char*
  or wchar_t* anymore. The solution is to use newly added wxString methods
  char_str() (which returns a buffer convertible to char*) or wchar_str()
  (which returns a buffer convertible to wchar_t*). These methods are
  available in wxWidgets 2.8 series beginning with 2.8.4 as well.

- The value returned by wxString::operator[] or wxString::iterator cannot be
  used in switch statements anymore, because it's a class instance. Code like
  this won't compile:
     switch (str[i]) { ... }
  and has to be replaced with this:
     switch (str[i].GetValue()) { ... }
